# interactive_slam

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  imgui.ini  package.xml
.github/workflows/: build.yml
data/shader/: rainbow.frag  rainbow.vert  texture.frag  texture.vert
docker/kinetic/: Dockerfile
docker/kinetic_llvm/: Dockerfile
docker/melodic/: Dockerfile
docker/melodic_llvm/: Dockerfile
docker/noetic/: Dockerfile
docker/noetic_llvm/: Dockerfile
include/glk/: colormap.hpp  drawble.hpp  frame_buffer.hpp  glsl_shader.hpp  lines.hpp  mesh.hpp  mesh_utils.hpp  pointcloud_buffer.hpp  texture.hpp  texture_renderer.hpp
include/glk/loaders/: ply_loader.hpp
include/glk/primitives/: cone.hpp  coordinate_system.hpp  cube.hpp  grid.hpp  icosahedron.hpp  primitives.hpp
include/guik/: camera_control.hpp  gl_canvas.hpp  imgui_application.hpp  model_control.hpp  pointcloud_canvas.hpp  progress_interface.hpp  progress_modal.hpp  projection_control.hpp
include/hdl_graph_slam/: automatic_loop_close_window.hpp  edge_refinement_window.hpp  graph_edit_window.hpp  graph_merge_modal.hpp  interactive_edge.hpp  interactive_graph.hpp  interactive_keyframe.hpp  loop_close_model.hpp  manual_loop_close_model.hpp  parameter_server.hpp  plane_alignment_modal.hpp  plane_detection_modal.hpp  plane_detection_window.hpp  registration_methods.hpp  robust_kernels.hpp  version.h  version.h.in  version_modal.hpp
include/hdl_graph_slam/view/: drawable.hpp  drawable_object.hpp  edge_plane_view.hpp  edge_se3_plane_view.hpp  edge_se3_view.hpp  edge_view.hpp  interactive_graph_view.hpp  keyframe_view.hpp  line_buffer.hpp  plane_view.hpp  vertex_plane_cache.hpp  vertex_plane_view.hpp  vertex_view.hpp
src/: interactive_map_correction.cpp  interactive_slam.cpp  odometry2graph.cpp  pointcloud_viewer.cpp
src/glk/: colormap.cpp  frame_buffer.cpp  glsl_shader.cpp  lines.cpp  mesh.cpp  pointcloud_buffer.cpp
src/glk/loaders/: ply_loader.cpp
src/glk/primitives/: primitives.cpp
src/guik/: camera_control.cpp  gl_canvas.cpp  imgui_application.cpp  model_control.cpp  projection_control.cpp
src/hdl_graph_slam/: automatic_loop_close_window.cpp  edge_refinement_window.cpp  graph_edit_window.cpp  interactive_graph.cpp  interactive_keyframe.cpp  loop_close_modal.cpp  manual_loop_close_modal.cpp  plane_alignment_modal.cpp  plane_detection_modal.cpp  plane_detection_window.cpp  registration_methods.cpp  version_modal.cpp
src/hdl_graph_slam/view/: edge_view.cpp  plane_view.cpp  vertex_view.cpp
